--- a/style/main.css
+++ b/style/main.css
@@ -188,11 +188,13 @@ input, select {
 table .icon img {
 	width:20px;
 }
-input[type="text"],input[type="number"], input[type="password"], input[type="email"], input[type="date"] {
+input[type="text"], input[type="number"], 
+input[type="password"], input[type="email"], 
+input[type="date"] {
 	padding:5px;
 	font-size: 17px;
 }
-textarea {
+textarea, select {
 	padding:5px;
 	font-size: 15px;
 }
