--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,4 @@
-/* Uses code from http://mystrd.at/modern-clean-css-sticky-footer/ [2015-03-26 blaine1] */
+/* Uses code from http://stackoverflow.com/a/18066619 [2015-03-26 blaine1] */
 
 #footer {
     position: absolute;
@@ -20,7 +20,7 @@ body {
 	background-color: #FEFEFF;
 	width:960px;
 	margin:auto;
-	margin-bottom:40px;
+	margin-bottom:60px;
 	color: #050051;
 }
 
@@ -217,3 +217,6 @@ textarea, select {
 	font-size: 15px;
 }
 
+form {
+	margin-bottom:20px;
+}
