added success messages to most pages

--- a/style/main.css
+++ b/style/main.css
@@ -180,7 +180,7 @@ a, a:visited {
 	margin-bottom:5px;
 }
 
-.success {
+.notice {
 	background-color: #AAAAFF;
 	color: black;
 	border: 1px #3939AA solid;
