--- a/style/main.css
+++ b/style/main.css
@@ -225,12 +225,19 @@ td.icon {
 	width:20px;
 	max-width: 20px;
 }
+
 input[type="text"], input[type="number"], 
 input[type="password"], input[type="email"], 
 input[type="date"] {
 	padding:5px;
 	font-size: 17px;
 }
+
+input[type="checbox"] {
+	padding:5px;
+	background-color: #FEFEFF;
+}
+
 textarea, select {
 	padding:5px;
 	font-size: 15px;
