--- a/style/main.css
+++ b/style/main.css
@@ -233,7 +233,7 @@ input[type="date"] {
 	font-size: 17px;
 }
 
-input[type="checbox"] {
+input[type="checkbox"] {
 	padding:5px;
 	background-color: #FEFEFF;
 }
